[metadata]
name = indico-plugin-payment-govukpay
version = 3.3
description = GovUKPay
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
# url = https://github.com/indico/indico-plugins
license = MIT
# author = Max Fischer, Martin Claus and Indico Team (CERN)
# author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12.2, <3.13
install_requires =
    indico>=3.3
    iso4217==1.6.20180829

[options.entry_points]
indico.plugins =
    payment_govukpay = indico_payment_govukpay.plugin:GovukpayPaymentPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
